[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Wind.png" type="Texture" id=1]
[ext_resource path="res://Objects/Fan.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 60.2454 )

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.911392, 0.519318 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
trail_divisor = 4
emission_shape = 2
emission_box_extents = Vector3( 25, 5, 1 )
flag_disable_z = true
direction = Vector3( 0, -5, 0 )
spread = 0.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 5.0
orbit_velocity = 0.0
orbit_velocity_random = 0.24
radial_accel = 2.3
tangential_accel = 1.0
damping = 5.0
angle_curve = SubResource( 3 )
scale = 0.3
scale_curve = SubResource( 5 )
color = Color( 1, 1, 1, 0.435294 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 34.8965, 53.5654 )

[node name="Fan" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 25, -59.6848 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Area2D"]
position = Vector2( 24.8974, 0 )
amount = 64
lifetime = 4.0
preprocess = 12.0
visibility_rect = Rect2( -1000, -1000, 2000, 2000 )
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="LowerChecker" type="Area2D" parent="."]
position = Vector2( 0.33371, 3.50395 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerChecker"]
position = Vector2( 24.887, -50.6266 )
shape = SubResource( 7 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="LowerChecker" to="." method="_on_LowerChecker_body_entered"]
[connection signal="body_exited" from="LowerChecker" to="." method="_on_LowerChecker_body_exited"]
